create Category and Figurine models. create base templates (base, navabr, header, index)

--- a/tresor-x/treserxcollection/core/templates/core/base.html
+++ b/tresor-x/treserxcollection/core/templates/core/base.html
@@ -1,10 +1,24 @@
-<!DOCTYPE html>
-<html lang="en">
+<!doctype html>
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+
+    <!--    TAILWINDCSS CDN-->
+    <script src="https://cdn.tailwindcss.com"></script>
+
+    <title>{% block title%}{% endblock %} | TresorXcollection</title>
 </head>
 <body>
+<header>{% block header %}{% include 'core/header.html' %}{% endblock %}</header>
+
+<nav>{% block navbar %}{% include 'core/navbar.html' %}{% endblock %}</nav>
+
+<main>{% block content %}{% endblock %}</main>
+
+<footer>{% block footer %}{% endblock %}</footer>
 
 </body>
 </html>
