--- a/tresor-x/treserxcollection/core/templates/core/navbar.html
+++ b/tresor-x/treserxcollection/core/templates/core/navbar.html
@@ -1,10 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-
-</body>
-</html>
+<nav class="my-6">
+    <ul class="flex justify-around items-center flex-wrap">
+        <li class=""><a href="" class="w-full h-full p-3 hover:underline">Mes figurines</a></li>
+        <li class=""><a href="" class="w-full h-full p-3 hover:underline">Ma liste de souhaits</a></li>
+        <li class=""><a href="" class="w-full h-full p-3 hover:underline">Toutes les figurines</a></li>
+    </ul>
+</nav>
